compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__block_assignment.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn main() {\n  let x = {\n    1\n    2\n  }\n  x\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> integer().
main() ->
    X = begin
        1,
        2
    end,
    X.
