compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__constant_named_module_info_with_function_inside.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn function() {\n    1\n}\n\npub const module_info = function\n\npub fn main() {\n    module_info()\n}\n"
---
----- SOURCE CODE

pub fn function() {
    1
}

pub const module_info = function

pub fn main() {
    module_info()
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([function/0, main/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec function() -> integer().
function() ->
    1.

-file("/root/project/test/my/mod.rakun", 8).
-spec main() -> integer().
main() ->
    function().
