compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__constant_named_module_info_with_function_inside_imported_qualified.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 856
expression: "\nimport some_module.{module_info}\n\npub fn main() {\n    module_info()\n}\n"
---
----- SOURCE CODE

import some_module.{module_info}

pub fn main() {
    module_info()
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 4).
-spec main() -> integer().
main() ->
    some_module:function().
