compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__dynamic.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 614
expression: pub type Dynamic
---
----- SOURCE CODE
pub type Dynamic

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([dynamic_/0]).

-type dynamic_() :: any().
