compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__field_access_function_call.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 409
expression: "\nrecord FnBox {\n  FnBox(f: fn(Int) -> Int)\n}\nfn main() {\n    let b = FnBox(f: fn(x) { x })\n    b.f(5)\n}\n"
---
----- SOURCE CODE

record FnBox {
  FnBox(f: fn(Int) -> Int)
}
fn main() {
    let b = FnBox(f: fn(x) { x })
    b.f(5)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([fn_box/0]).

-type fn_box() :: {fn_box, fun((integer()) -> integer())}.

-file("/root/project/test/my/mod.rakun", 5).
-spec main() -> integer().
main() ->
    B = {fn_box, fun(X) -> X end},
    (erlang:element(2, B))(5).
